--- a/index.html
+++ b/index.html
@@ -653,9 +653,9 @@
 <p>© 2024 Silicon. All rights reserved.</p>
 <p> Credit MadrasThemes</p>
 </footer>
-
-
 </div>  
+
+<script src="script.js"></script>  
 </body>
 </html>
         
