--- a/contact.html
+++ b/contact.html
@@ -80,15 +80,15 @@
                     <div class="forms">
                         <form>
                             <label for="full name">Full Name</label>
-                            <input type="text" name="full name" placeholder="Enter your full name" required>
+                            <input type="text" id="full name" name="full name" placeholder="Enter your full name" required>
                         </form>
                         <form>
                             <label for="email">Email adress</label>
-                            <input type="email" name="email" placeholder="Enter your email" required>
+                            <input type="email" id="email" name="email" placeholder="Enter your email" required>
                         </form>
                         <form>
                             <label for="specialist">Specialist</label>
-                            <input type="text" name="specialist" placeholder="choose a specialist" >
+                            <input type="text" id="specialist" name="specialist" placeholder="choose a specialist" >
                         </form>
                     </div>
                     <button class="btn-appointment">Make an appointment</button>
@@ -111,21 +111,21 @@
                        <div class="contactinfo-wrapper">
                             <img src="./Assets/bx-time-five.svg"></img>
                             <div class="contact-flex">
-                                <span>Mon – Fri: 9:00 am – 22:00 am</span> 
-                                <span>Sat – Sun: 9:00 am – 20:00 am</span> 
+                                <span><p>Mon – Fri:</p> 9:00 am – 22:00 am</span> 
+                                <span><p>Sat – Sun:</p> 9:00 am – 20:00 am</span> 
                             </div>
     
                        </div>
                     </div>
                     <div class="contact-info">
-                        <h4>Medical Center 1</h4>
+                        <h4>Medical Center 2</h4>
                         <span><img src="./Assets/bx-map.svg"></img>2464 Royal Ln. Mesa,New Jersey 45463</span> 
                        <span><img src="./Assets/bx-phone-call.svg"></img>(406) 544-0123</span> 
                        <div class="contactinfo-wrapper">
                             <img src="./Assets/bx-time-five.svg"></img>
                             <div class="contact-flex">
-                                <span>Mon – Fri: 9:00 am – 22:00 am</span> 
-                                <span>Sat – Sun: 9:00 am – 20:00 am</span> 
+                                <span><p>Mon – Fri:</p> 9:00 am – 22:00 am</span> 
+                                <span><p>Sat – Sun:</p> 9:00 am – 20:00 am</span> 
                             </div>
                     </div>
                     <div class="sm-icons">
