--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>Silicon - Contact</title>
     <link rel="stylesheet" href="https://kit.fontawesome.com/a576612222.css" crossorigin="anonymous">
     <link rel="stylesheet" href="./CSS/main.css">
 </head>
@@ -46,9 +46,9 @@
         
         <main class="container">
             <div class="main-wrapper">
+                <span>placeholder >> Contact</span>
+                <h1>Contact us</h1>
                 <div class="contact-wrapper">
-                    <span>placeholder >> Contact</span>
-                    <h1>Contact us</h1>
                     
                     <div class="contact-card">
                         <div class="card-img">
